Add post routes to clear all cuisine and restaurants

--- a/Views/cuisines.cshtml
+++ b/Views/cuisines.cshtml
@@ -31,6 +31,10 @@
 <button type="submit" name="button" class="btn btn-lg btn-info">Submit</button>
 </form>
 
+<form action="/cuisines/deleted" method="post">
+  <button type="submit" name="button" class="btn btn-lg btn-info">Delete All Cuisines</button>
+</form>
+
 <div class="row">
   <a href="/restaurants">See all restaurants</a><br>
   <a href="/">Home Page</a>
