--- a/Views/restaurants.cshtml
+++ b/Views/restaurants.cshtml
@@ -39,6 +39,10 @@
 <button type="submit" name="button" class="btn btn-lg btn-info">Submit</button>
 </form>
 
+<form action="/restaurants/deleted" method="post">
+  <button type="submit" name="button" class="btn btn-lg btn-info">Delete All Restaurants</button>
+</form>
+
 <div class="row">
   <a href="/cuisines">See all cuisines</a><br>
   <a href="/">Home Page</a>
