--- a/Views/cuisine.cshtml
+++ b/Views/cuisine.cshtml
@@ -20,6 +20,15 @@ else
 </ol>
 }
 
+<form action="/cuisine/@Model["cuisine"].GetId()/cleared" method="post">
+  <button type="submit" name="button" class="btn btn-lg btn-info">Delete All Restaurants in this Cuisine</button>
+</form>
+
+<form action="/cuisine/@Model["cuisine"].GetId()/deleted" method="post">
+  <button type="submit" name="button" class="btn btn-lg btn-info">Delete this Cuisine</button>
+</form>
+
+
 <div class="row">
   <a href="/restaurants">See all restaurants</a><br>
   <a href="/cuisines">See all cuisines</a><br>
