--- a/Views/restaurants.cshtml
+++ b/Views/restaurants.cshtml
@@ -5,14 +5,14 @@
 
 <div class="well">
   <h2>All Restaurant Groups:</h2>
-  @if(@Model.Count== 0)
+  @if(@Model["restaurantList"].Count== 0)
   {
     <h5> Your restaurant list is empty </h5>
   }
   else
   {
     <ol>
-    @foreach (var restaurant in @Model)
+    @foreach (var restaurant in @Model["restaurantList"])
     {
       <li><a href="/restaurants/@restaurant.GetId()"> @restaurant.GetName(), @restaurant.GetDate().ToShortDateString(), @restaurant.GetFavDish() </a></li>
     }
@@ -33,7 +33,12 @@
       <label for="fav-dish">Favorite Dish:</label>
       <input type="text" name="fav-dish" id="fav-dish">
 
-      @* add form input for type of cuisine with options *@
+      <select name="cuisine-id">
+    @foreach (var cuisine in @Model["cuisineList"])
+    {
+      <option value="@cuisine.GetId()">@cuisine.GetName()</option>
+    }
+  </select>
   </div>
 </div>
 <button type="submit" name="button" class="btn btn-lg btn-info">Submit</button>
