add patch route for update method on restaurant name.

--- a/Views/cuisine.cshtml
+++ b/Views/cuisine.cshtml
@@ -32,7 +32,7 @@ else
 <form action="/cuisine/edit/@Model["cuisine"].GetId()" method="post">
   <input type="hidden" name="_method" value="PATCH">
   <input name="cuisine-id" type="hidden" value="@Model["cuisine"].GetId()">
-  <label for="cuisine-name">Category name</label>
+  <label for="cuisine-name">Name</label>
   <input id="cuisine-name" name="cuisine-name" type="text">
   <button type="submit" class="btn btn-lg btn-info">Submit</button>
 </form>
