--- a/Views/restaurant.cshtml
+++ b/Views/restaurant.cshtml
@@ -10,6 +10,16 @@
   <li>@Model["cuisine"].GetName()</li>
 </ul>
 
+<h2>Edit restaurant: @Model["restaurant"].GetName()</h2>
+<form action="/restaurant/edit/@Model["restaurant"].GetId()" method="post">
+  <input type="hidden" name="_method" value="PATCH">
+  <input name="restaurant-id" type="hidden" value="@Model["restaurant"].GetId()">
+  <label for="restaurant-name">Name</label>
+  <input id="restaurant-name" name="restaurant-name" type="text">
+  <button type="submit" class="btn btn-lg btn-info">Submit</button>
+</form>
+
+
 <form action="/restaurant/@Model["restaurant"].GetId()/deleted" method="post">
   <button type="submit" name="button" class="btn btn-lg btn-info">Delete this Restaurant</button>
 </form>
