--- a/Views/restaurant.cshtml
+++ b/Views/restaurant.cshtml
@@ -11,15 +11,31 @@
 </ul>
 
 <h2>Edit restaurant: @Model["restaurant"].GetName()</h2>
-<form action="/restaurant/editname/@Model["restaurant"].GetId()" method="post">
+<form action="/restaurant/edit/@Model["restaurant"].GetId()" method="post" id="update">
   <input type="hidden" name="_method" value="PATCH">
   <input name="restaurant-id" type="hidden" value="@Model["restaurant"].GetId()">
-  <label for="restaurant-name">Name</label>
+  <label for="restaurant-name">New Name:</label>
   <input id="restaurant-name" name="restaurant-name" type="text">
+
+  <label for="restaurant-fav-dish">New Fav Dish:</label>
+  <input id="restaurant-fav-dish" name="restaurant-fav-dish" type="text">
+
+  <label for="restaurant-date">New Date:</label>
+  <input id="restaurant-date" name="restaurant-date" type="date">
+
+  <label for="restaurant-cuisineid">New Cuisine:</label>
+  <select name="restaurant-cuisineid">
+    <option value="0"></option>
+    @foreach (var cuisine in @Model["cuisines"])
+    {
+      <option value="@cuisine.GetId()">@cuisine.GetName()</option>
+    }
+  </select>
+
   <button type="submit" class="btn btn-lg btn-info">Submit</button>
 </form>
 
-<h2>Edit restaurant: @Model["restaurant"].GetDate().ToShortDateString()</h2>
+@* <h2>Edit restaurant: @Model["restaurant"].GetDate().ToShortDateString()</h2>
 <form action="/restaurant/editdate/@Model["restaurant"].GetId()" method="post" id="update">
   <input type="hidden" name="_method" value="PATCH">
   <input name="restaurant-id" type="hidden" value="@Model["restaurant"].GetId()">
@@ -32,16 +48,8 @@
 <form action="/restaurant/editcuisineid/@Model["restaurant"].GetId()" method="post">
   <input type="hidden" name="_method" value="PATCH">
   <input name="restaurant-id" type="hidden" value="@Model["restaurant"].GetId()">
-  <label for="restaurant-cuisineid">New Cuisine:</label>
-  <select name="restaurant-cuisineid">
-    <option value="0"></option>
-    @foreach (var cuisine in @Model["cuisines"])
-    {
-      <option value="@cuisine.GetId()">@cuisine.GetName()</option>
-    }
-  </select>
   <button type="submit" class="btn btn-lg btn-info">Submit</button>
-</form>
+</form> *@
 
 
 <form action="/restaurant/@Model["restaurant"].GetId()/deleted" method="post">
