--- a/Views/cuisines.cshtml
+++ b/Views/cuisines.cshtml
@@ -32,6 +32,7 @@
 </form>
 
 <form action="/cuisines/deleted" method="post">
+  <input type="hidden" name="_method" value="DELETE">
   <button type="submit" name="button" class="btn btn-lg btn-info">Delete All Cuisines</button>
 </form>
 
