--- a/Views/restaurant.cshtml
+++ b/Views/restaurant.cshtml
@@ -35,24 +35,8 @@
   <button type="submit" class="btn btn-lg btn-info">Submit</button>
 </form>
 
-@* <h2>Edit restaurant: @Model["restaurant"].GetDate().ToShortDateString()</h2>
-<form action="/restaurant/editdate/@Model["restaurant"].GetId()" method="post" id="update">
-  <input type="hidden" name="_method" value="PATCH">
-  <input name="restaurant-id" type="hidden" value="@Model["restaurant"].GetId()">
-  <label for="restaurant-date">New Date:</label>
-  <input id="restaurant-date" name="restaurant-date" type="date">
-  <button type="submit" class="btn btn-lg btn-info">Submit</button>
-</form>
-
-<h2>Edit restaurant: @Model["restaurant"].GetCuisineId()</h2>
-<form action="/restaurant/editcuisineid/@Model["restaurant"].GetId()" method="post">
-  <input type="hidden" name="_method" value="PATCH">
-  <input name="restaurant-id" type="hidden" value="@Model["restaurant"].GetId()">
-  <button type="submit" class="btn btn-lg btn-info">Submit</button>
-</form> *@
-
-
 <form action="/restaurant/@Model["restaurant"].GetId()/deleted" method="post">
+  <input type="hidden" name="_method" value="DELETE">
   <button type="submit" name="button" class="btn btn-lg btn-info">Delete this Restaurant</button>
 </form>
 
