--- a/Views/restaurants.cshtml
+++ b/Views/restaurants.cshtml
@@ -46,6 +46,7 @@
 </form>
 
 <form action="/restaurants/deleted" method="post">
+  <input type="hidden" name="_method" value="DELETE">
   <button type="submit" name="button" class="btn btn-lg btn-info">Delete All Restaurants</button>
 </form>
 
