Add Views, and Routes for search function

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -8,3 +8,9 @@
 <div class="row">
   <a href="/restaurants">See all restaurants</a>
 </div>
+<div class="row">
+  <form action="/cuisines/search" method="post">
+    <label for="search">Search a cuisine in the database:</label>
+    <input type="text" name="search" id="search">
+  </form>
+</div>
