--- a/Views/restaurants.cshtml
+++ b/Views/restaurants.cshtml
@@ -33,6 +33,7 @@
       <label for="fav-dish">Favorite Dish:</label>
       <input type="text" name="fav-dish" id="fav-dish">
 
+      <label for="cuisine-id">Type of Cuisine:</label>
       <select name="cuisine-id">
         <option value="0"></option>
         @foreach (var cuisine in @Model["cuisineList"])
