add cover photo, text, and two photo boxes to search for cuisines and restaurants.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <title>Yelp</title>
   </head>
   <body>
+    <div class="header"><img src="/Contents/img/logo.jpg" class="logo" /></div>
     <div class="container">
       @RenderBody()
     </div>
