add trial method to return restaurants with minimum rating.

--- a/Contents/css/styles.css
+++ b/Contents/css/styles.css
@@ -73,7 +73,7 @@
   vertical-align: middle;
   font-size: 45px;
   line-height: normal;
-  background-color: rgba(255, 255, 255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   text-align: center;
 }
 
